# just_practice

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.py
app/: config.py  security.py
app/api/: auth.py
app/api/v1/: __init__.py  home.py  login.py  users.py
app/core/: database.py
app/crud/: base.py  users.py
app/models/: base.py  users.py
app/schemas/: token.py  users.py
migration/: env.py
migration/versions/: 9fe07553e9ea_.py
